VLC 4: "Pin Video Control" doesn't revert on "cancel" in settings dialog
version (current master): https://artifacts.videolan.org/vlc/nightly-win64/20230125-0449/
steps:
- play a video
- go to settings and tick "Pin Video Controls" -> interface changes to "Pin Video Controls" setting to show the preview before clicking ok setting (this is intended).
- click cancel on the setting dialog
the setting doesn't revert to original state.