qt: reset pin-controls on settings dialog cancel

fixes #27773